docs/api/qiskit/0.25/qiskit.transpiler.TransformationPass.mdx
---
title: TransformationPass
description: API reference for qiskit.transpiler.TransformationPass
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.TransformationPass
---

# qiskit.transpiler.TransformationPass

<Class id="qiskit.transpiler.TransformationPass" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/transpiler/basepasses.py" signature="TransformationPass(*args, **kwargs)" modifiers="class">
  A transformation pass: change DAG, not property set.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.TransformationPass.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                |                               |
  | -------------------------------------------------------------------------------------------------------------- | ----------------------------- |
  | [`__init__`](#qiskit.transpiler.TransformationPass.__init__ "qiskit.transpiler.TransformationPass.__init__")() | Initialize self.              |
  | [`name`](#qiskit.transpiler.TransformationPass.name "qiskit.transpiler.TransformationPass.name")()             | Return the name of the pass.  |
  | [`run`](#qiskit.transpiler.TransformationPass.run "qiskit.transpiler.TransformationPass.run")(dag)             | Run a pass on the DAGCircuit. |

  ## Attributes

  |                                                                                                                                                        |                                             |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.TransformationPass.is_analysis_pass "qiskit.transpiler.TransformationPass.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.TransformationPass.is_transformation_pass "qiskit.transpiler.TransformationPass.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.TransformationPass.is_analysis_pass" signature="is_analysis_pass" modifiers="property">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.TransformationPass.is_transformation_pass" signature="is_transformation_pass" modifiers="property">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.TransformationPass.name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.TransformationPass.run" signature="run(dag)" modifiers="abstract">
    Run a pass on the DAGCircuit. This is implemented by the pass developer.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the dag on which the pass is run.

    **Raises**

    **NotImplementedError** – when this is left unimplemented for a pass.
  </Function>
</Class>

